--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -17,6 +17,7 @@ exec gnome-settings-daemon
 exec xautolock -time 5 -locker 'i3lock -c 000000' &
 exec --no-startup-id ssh-add
 exec --no-startup-id xsetroot -solid "#333333"
+exec --no-startup-id nm-applet
 
 # color defines for zenburn styled i3
 set $bl     #000000
