--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -43,10 +43,9 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec xterm
-bindsym $mod+p exec touch /tmp/force_wifi_reconnect
 
-bindsym $mod+bracketleft exec "xrandr --output eDP1 --mode 1366x768 --output HDMI1 --off"
-bindsym $mod+bracketright exec "xrandr --output eDP1 --off --output HDMI1 --mode 1920x1024"
+bindsym $mod+bracketright exec "xrandr --output LVSD1 --mode 1280x800 --output HDMI1 --off"
+bindsym $mod+bracketleft exec "xrandr --output LVSD1 --off --output HDMI1 --mode 1920x1024"
 
 hide_edge_borders both
 
