--- a/kernel/MacBookPro9,2-linux-4.0.5-no-modules-or-initrd.config
+++ b/kernel/MacBookPro9,2-linux-4.0.5-no-modules-or-initrd.config
@@ -541,7 +541,7 @@ CONFIG_ACPI_NUMA=y
 CONFIG_X86_PM_TIMER=y
 CONFIG_ACPI_CONTAINER=y
 CONFIG_ACPI_HOTPLUG_IOAPIC=y
-# CONFIG_ACPI_SBS is not set
+CONFIG_ACPI_SBS=y
 # CONFIG_ACPI_HED is not set
 # CONFIG_ACPI_CUSTOM_METHOD is not set
 # CONFIG_ACPI_BGRT is not set
@@ -1724,6 +1724,7 @@ CONFIG_PTP_1588_CLOCK=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 # CONFIG_GPIOLIB is not set
 # CONFIG_W1 is not set
+
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
